// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/viewHeader/ViewHeaderSearch return search menu 1`] = `
<div>
  <div
    class="board-search-field"
  >
    <i
      class="CompassIcon icon-magnify board-search-icon"
    />
    <input
      class="Editable "
      placeholder="Search cards"
      value=""
    />
  </div>
</div>
`;

exports[`components/viewHeader/ViewHeaderSearch search text after input 1`] = `
<div>
  <div
    class="board-search-field"
  >
    <i
      class="CompassIcon icon-magnify board-search-icon"
    />
    <input
      class="Editable "
      placeholder="Search cards"
      title="Hello"
      value="Hello"
    />
  </div>
</div>
`;
